--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>spark-sql_2.11</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 	</dependencies>
 </project>
