--- a/pom.xml
+++ b/pom.xml
@@ -2,34 +2,64 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>it.unitn.dbtrento.spark</groupId>
+  <groupId>eu.unitn.disi.db</groupId>
   <artifactId>spark-core</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <scala.version>2.11</scala.version>
+    <spark.version>2.2.1</spark.version>
+    <hadoop.version>2.7.2</hadoop.version>
   </properties>
+
+  <developers>
+    <developer>
+      <id>forons</id>
+      <name>Daniele Foroni</name>
+      <email>daniele.foroni@gmail.com</email>
+      <url>http://disi.unitn.it/~forons</url>
+      <organization>University of Trento - DbTrento</organization>
+      <organizationUrl>http://db.disi.unitn.eu/</organizationUrl>
+    </developer>
+    <developer>
+      <id>bluecopper</id>
+      <name>Giulia Preti</name>
+      <organization>University of Trento - DbTrento</organization>
+      <organizationUrl>http://db.disi.unitn.eu/</organizationUrl>
+    </developer>
+    <developer>
+      <id>welpaolo</id>
+      <name>Paolo Sottovia</name>
+      <organization>University of Trento - DbTrento</organization>
+      <organizationUrl>http://db.disi.unitn.eu/</organizationUrl>
+    </developer>
+  </developers>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.11</artifactId>
-      <version>2.2.0</version>
-      <!--<scope>provided</scope>-->
+      <artifactId>spark-core_${scala.version}</artifactId>
+      <version>${spark.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.11</artifactId>
-      <version>2.2.0</version>
-      <!--<scope>provided</scope>-->
+      <artifactId>spark-sql_${scala.version}</artifactId>
+      <version>${spark.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.7.2</version>
+      <version>${hadoop.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>LATEST</version>
     </dependency>
   </dependencies>
 </project>
