--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.unitn.disi.db</groupId>
   <artifactId>spark-core</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.2.0</version>
+  <description>Custom wrapper for Apache Spark</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,7 +14,7 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
-    <spark.version>2.2.0</spark.version>
+    <spark.version>${project.version}</spark.version>
     <hadoop.version>2.7.2</hadoop.version>
   </properties>
 
@@ -22,13 +23,14 @@
       <id>forons</id>
       <name>Daniele Foroni</name>
       <email>daniele.foroni@gmail.com</email>
-      <url>http://disi.unitn.it/~forons</url>
+      <url>http://disi.unitn.it/~foroni/</url>
       <organization>University of Trento - DbTrento</organization>
-      <organizationUrl>http://disi.unitn.it/~foroni/</organizationUrl>
+      <organizationUrl>http://db.disi.unitn.eu/</organizationUrl>
     </developer>
     <developer>
       <id>bluecopper</id>
       <name>Giulia Preti</name>
+      <url>http://gpreti.disi.unitn.it/</url>
       <organization>University of Trento - DbTrento</organization>
       <organizationUrl>http://db.disi.unitn.eu/</organizationUrl>
     </developer>
