--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
+    <scala.version>${scala.binary.version}.12</scala.version>
     <spark.version>${project.version}</spark.version>
     <hadoop.version>2.7.2</hadoop.version>
   </properties>
